<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/todo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        >

        <TextView
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_7500"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp" />

        <TextView
            android:id="@+id/followerText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/follower"
            android:layout_marginRight="20dp"
            android:text="@string/followers"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/follower"
            android:layout_marginEnd="20dp" />
        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5000"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/followerText"
            android:textColor="#000"
            android:layout_toEndOf="@+id/followerText"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/following"
            android:gravity="center"
            android:text="@string/following"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/following"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#848587"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/image_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/username"
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginStart="100dp"
            android:layout_toEndOf="@+id/username"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/organisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/organisation"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_below="@id/username"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/orgValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_description"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/organisation"
            android:text="@string/andela"
            android:textSize="16sp"
            android:layout_marginStart="85dp"
            android:layout_toEndOf="@id/organisation" />
    </RelativeLayout>

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/bio"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#848587"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/bioValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/i_love_music_photography_travel_and_dance"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#848587"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/public_repos"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/numberOfRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/_70"
            android:textColor="#000"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/repos"
            android:layout_toRightOf="@+id/repos" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>

